Doc/force-app/main/default/objects/Billing_Schedule__c/Billing_Schedule__c.object-meta.xml
<CustomObject>
    <description>Originating in relation to Quote/Quote Lines for the purpose of representing Invoicing Dates in the OSA document. Used as the source for Billing Schedule creation in NetSuite.</description>
    <label>Billing Schedule</label>
    <nameField>
        <displayFormat>BS-{0000}</displayFormat>
        <label>Billing Schedule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Billing Schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>