Doc/force-app/main/default/objects/Billing_Schedule__c/fields/Billing_Period_Index__c.field-meta.xml
<CustomField>
    <fullName>Billing_Period_Index__c</fullName>
    <description>The placement in this record in the series of Billing Schedules</description>
    <label>Billing Period Index</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>