Doc/force-app/main/default/objects/Billing_Schedule__c/fields/Services_Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Services_Payment_Terms__c</fullName>
    <label>Services Payment Terms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard No Retainer</fullName>
            </value>
            <value>
                <fullName>Standard With Retainer</fullName>
            </value>
            <value>
                <fullName>Standard No Retainer with Credit</fullName>
            </value>
            <value>
                <fullName>Standard Retainer with Credit</fullName>
            </value>
            <value>
                <fullName>Standard with Fixed Fee</fullName>
            </value>
            <value>
                <fullName>No Services</fullName>
            </value>
            <value>
                <fullName>Prime</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Milestone</fullName>
            </value>
            <value>
                <fullName>Trial</fullName>
            </value>
            <value>
                <fullName>FF</fullName>
            </value>
            <value>
                <fullName>T&amp;M</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Prime Quarterly</fullName>
            </value>
            <value>
                <fullName>Blended FF_T&amp;M</fullName>
            </value>
            <value>
                <fullName>Blended Milestone_T&amp;M</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>