Doc/force-app/main/default/objects/Billing_Schedule__c/fields/Subscription_Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Payment_Terms__c</fullName>
    <label>Subscription Payment Terms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Software_Payment_Terms</valueSetName>
    </valueSet>
</CustomField>