Doc/force-app/main/default/objects/Billing_Schedule__c/fields/User_Modified__c.field-meta.xml
<CustomField>
    <fullName>User_Modified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identifies that this record has been updated or created by a user and not via system automation.</description>
    <label>User Modified</label>
    <type>Checkbox</type>
</CustomField>